--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-    href="./build/bundle.css"
+    href="https://unpkg.com/theme-toggles@1.0.10/build/bundle-min.css"
     rel="stylesheet"
   />
     <title>Document</title>
