--- a/test/div.html
+++ b/test/div.html
@@ -7,7 +7,7 @@
     <link href="./../css/bundle.min.css" rel="stylesheet" />
     <title>Checkbox</title>
 </head>
-<body class="dark">
+<body>
     <div class="grid">
         <div>  
             <div class="theme-toggle" id="dark-side" onclick="toggleClick(this)">
