--- a/test/button.html
+++ b/test/button.html
@@ -7,7 +7,7 @@
     <link href="./../css/bundle.min.css" rel="stylesheet" />
     <title>Checkbox</title>
 </head>
-<body class="dark">
+<body>
     <div class="grid">
         <div>  
             <button class="theme-toggle" type="button" aria-label="Toggle theme" id="dark-side" onclick="toggleClick(this)">
