--- a/test/checkbox.html
+++ b/test/checkbox.html
@@ -197,6 +197,19 @@
                 <input type="checkbox" onclick="toggleReverse('dark-inner')">
             </label>
         </div>
+        <div>  
+            <label class="theme-toggle" id="half-sun">
+                <input type="checkbox" />
+                <span class="theme-toggle-sr">Toggle theme</span>
+                <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="theme-toggle__half-sun"  height="1em" width="1em" viewBox="0 0 32 32" fill="currentColor" viewBox="0 0 32 32">
+                    <path d="M27.5 11.5v-7h-7L16 0l-4.5 4.5h-7v7L0 16l4.5 4.5v7h7L16 32l4.5-4.5h7v-7L32 16l-4.5-4.5zM16 25.4V6.6c5.2 0 9.4 4.2 9.4 9.4s-4.2 9.4-9.4 9.4z"/>
+                </svg>
+            </label>
+            <label>
+                Reversed
+                <input type="checkbox" onclick="toggleReverse('half-sun')">
+            </label>
+        </div>
     </div>
     <script src="./base.js"></script>
 </body>
