--- a/test/preview/index.html
+++ b/test/preview/index.html
@@ -122,6 +122,36 @@
             aria-hidden="true"
             width="1em"
             height="1em"
+            fill="currentColor"
+            class="theme-toggle__around"
+            viewBox="0 0 32 32"
+          >
+            <clipPath id="theme-toggle__around__cutout">
+              <path d="M0 0h42v30a1 1 0 00-16 13H0Z" />
+            </clipPath>
+            <g clip-path="url(#theme-toggle__around__cutout)">
+              <circle cx="16" cy="16" r="8.4" />
+              <g>
+                <circle cx="16" cy="3.3" r="2.3" />
+                <circle cx="27" cy="9.7" r="2.3" />
+                <circle cx="27" cy="22.3" r="2.3" />
+                <circle cx="16" cy="28.7" r="2.3" />
+                <circle cx="5" cy="22.3" r="2.3" />
+                <circle cx="5" cy="9.7" r="2.3" />
+              </g>
+            </g>
+          </svg>
+        </label>
+      </section>
+      <section>
+        <label class="theme-toggle" title="Toggle theme">
+          <input type="checkbox" />
+          <span class="theme-toggle-sr">Toggle theme</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+            width="1em"
+            height="1em"
             class="theme-toggle__dark-side"
             fill="currentColor"
             viewBox="0 0 32 32"
@@ -229,6 +259,23 @@
           >
             <path d="M16 9c3.9 0 7 3.1 7 7s-3.1 7-7 7" />
             <path d="M16 .5C7.4.5.5 7.4.5 16S7.4 31.5 16 31.5 31.5 24.6 31.5 16 24.6.5 16 .5zm0 28.1V23c-3.9 0-7-3.1-7-7s3.1-7 7-7V3.4C23 3.4 28.6 9 28.6 16S23 28.6 16 28.6z" />
+          </svg>
+        </label>
+      </section>
+      <section>
+        <label class="theme-toggle" title="Toggle theme">
+          <input type="checkbox" />
+          <span class="theme-toggle-sr">Toggle theme</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+            class="theme-toggle__half-sun"
+            height="1em"
+            width="1em"
+            viewBox="0 0 32 32"
+            fill="currentColor"
+          >
+            <path d="M27.5 11.5v-7h-7L16 0l-4.5 4.5h-7v7L0 16l4.5 4.5v7h7L16 32l4.5-4.5h7v-7L32 16l-4.5-4.5zM16 25.4V6.6c5.2 0 9.4 4.2 9.4 9.4s-4.2 9.4-9.4 9.4z" />
           </svg>
         </label>
       </section>
