--- a/test/button.html
+++ b/test/button.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./global.css" rel="stylesheet"/>
-    <link href="./../css/bundle.min.css" rel="stylesheet" />
+    <link href="./../css/within.css" rel="stylesheet" />
     <title>Checkbox</title>
 </head>
 <body>
